[metadata]
name = yearly_hue
version = 1.3.1
author = Filip Úradník
author_email = filip.uradnik9@gmail.com
description = Generator of color hue based on the current year phase.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hue year color

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    hue = yearly_hue.__main__:main
